# sqs-navbat

./: .gitignore  Cargo.toml  README.md  attributes.json  database.db  database.db-shm  database.db-wal
.sqlx/: query-0771f326ff7912c485b5d33227bd6d1b5f11b36e756a31d5b6cc44b1c7f4349c.json  query-60a127c69659136bf62b22e9d88262054f04a0365868de4840bc13a3fb27a3b0.json  query-7c4e302bd2ad261703974f66f231a0161b0d1b61e59b80561d9cbf8218a753b3.json  query-a7ae363fb582be07d5157d4999c0ba9d0928693dd5a2e8391951958b58bc211a.json  query-c02c3cb96a8b8bfcef05ef4f542503ce465cd891c4a8be86fbd2ce7a586e1b27.json  query-e48a0bc78fd2f43fe0dea10d465151fb774dc2ab01b67ac553d2c9e11cb28c27.json
db/: init.sql  setup_db.sh
migrations/: 20230813085323_init.sql  20230813123912_queue_add_attrs.sql  20230813130737_created_updated_at_queue.sql  20230813131652_tags_table.sql  20230813154018_remove_tag_from_queue_table.sql
src/: main.rs
src/api/: change_message_visibility.rs  create_queue.rs  delete_message.rs  get_queue_attributes.rs  get_queue_url.rs  helpers.rs  list_queues.rs  mod.rs  receive_message.rs  send_message.rs  set_queue_attributes.rs
src/queue/: mod.rs
src/service/: mod.rs  queue.rs
test-app/: go.mod  go.sum  main.go
