[package]
name = "sqs-navbat"
version = "0.1.0"
edition = "2021"
description = "A simple SQS server mock"

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] } 
r2d2 = "0.8"
r2d2_sqlite = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde_json = "1.0.104"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
regex = "1.9.1"
serde_urlencoded = "0.7.1"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.30.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
anyhow = "1.0.72"
