[package]
name = "sqs-navbat"
version = "0.1.0"
edition = "2021"
description = "A simple SQS server mock"

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] } 
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
log = "0.4"
env_logger = "0.10"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde_json = "1.0.104"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
regex = "1.9.1"
serde_urlencoded = "0.7.1"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.30.0", features = ["full"] }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-rustls", "time"] }
anyhow = "1.0.72"
md5 = "0.7.0"
time = { version = "0.3.25", features = ["serde"] }
